added a bit of text

--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <style>
+        .container {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
+
+        .photo img {
+            height: 335px;
+            width: 300px;
+        }
+
+        @media (min-width: 700px) {
+            .intro {
+                float: left;
+                width: 49%;
+            }
+
+            .photo {
+                float: right;
+                width: 49%;
+            }
+            .photo img {
+                height: 669px;
+                width: 600px;
+            }
+        }
+
+
+    </style>
+    <meta charset="UTF-8">
     <title>Tomi Schumacher</title>
-  </head>
-  <body>
-    <p>Site under construction, please come back later.<p>
-    <p>Thanks</p>
-    <p>Tomi Schumacher, 1/31/2016<p>
-  </body>
+</head>
+<body>
+<div class="container">
+    <h1>Welcome</h1>
+    <div class="photo">
+        <img src="tomi_grey_600x669.jpeg">
+    </div>
+    <div class="intro">
+        <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
+
+        <p>I work as a Princpal Data Engineer/Consultant for <a target="_blank" href="https://ThinkBigAnalytics.com">Think
+            Big Analytics</a>,
+            where we help clients with clients with Big Data Strategy, Architecture and Implementation.</p>
+
+        <p>Apache Spark is an exciting Big Data Technology, which I have been using at different clients:
+            The power of the framwework combined with functional programming, leads to very compact and and beautiful
+            solutions and powerful
+            solutions.</p>
+
+        <p>I grew up and studied Computer Science at the Swiss Federal Institute of Technology, in Zurich Switzerland.
+            I lived and worked in Switzerland as a consultant until 2000, when I joined a startup in San Francisco.
+            Now I live in in Tustin, California, about half way between Los Angeles and San Diego.</p>
+
+        <p>Software is not only my job, but my passion. I enjoy the fast pace of innovation, which makes
+            live long learning a necessity.</p>
+
+        <p>Please check out my professional profile on linkedIn:
+            <a target="_blank" href="https://www.linkedin.com/pub/thomas-schumacher/5/6b9/959"
+               style="text-decoration:none;"><img
+                    src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15"
+                    alt="View Tomi Schumacher's LinkedIn profile" border="0"></a>
+        </p>
+
+        <p>There will be more shortly, please check back in.</p>
+
+    </div>
+
+</div>
+</body>
 </html>
