fixed english and layout adjustment for the phone

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <style>
         .container {
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -11,23 +12,17 @@
             width: 300px;
         }
 
-        @media (min-width: 700px) {
+        @media (min-width: 501px) {
             .intro {
                 float: left;
-                width: 49%;
+                width: 69%;
             }
 
             .photo {
                 float: right;
-                width: 49%;
-            }
-            .photo img {
-                height: 669px;
-                width: 600px;
+                width: 29%;
             }
         }
-
-
     </style>
     <meta charset="UTF-8">
     <title>Tomi Schumacher</title>
@@ -52,11 +47,10 @@
 
         <p>I work as a Princpal Data Engineer/Consultant for <a target="_blank" href="https://ThinkBigAnalytics.com">Think
             Big Analytics</a>,
-            where we help clients with clients with Big Data Strategy, Architecture and Implementation.</p>
+            where we help clients with Big Data Projects, using open source tools.</p>
 
         <p>Apache Spark is an exciting Big Data Technology, which I have been using at different clients:
-            The power of the framwework combined with functional programming, leads to very compact and and beautiful
-            solutions and powerful
+            The power of the framwework combined with functional programming, leads to very compact and elegant
             solutions.</p>
 
         <p>I grew up and studied Computer Science at the Swiss Federal Institute of Technology, in Zurich Switzerland.
@@ -72,11 +66,12 @@
                     src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15"
                     alt="View Tomi Schumacher's LinkedIn profile" border="0"></a>
         </p>
+        
+        <p>In my spare time I enjoy traveling, photography, listening to music and enjoying good food.</p>
 
         <p>There will be more shortly, please check back in.</p>
 
     </div>
-
 </div>
 </body>
 </html>
