--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
         }
 
-        .photo img {
-            height: 335px;
-            width: 300px;
+        .photo {
+            display: none;
         }
 
         @media (min-width: 501px) {
@@ -19,6 +18,7 @@
             }
 
             .photo {
+                display: block;
                 float: right;
                 width: 29%;
             }
@@ -40,7 +40,7 @@
 <div class="container">
     <h1>Welcome</h1>
     <div class="photo">
-        <img src="tomi_grey_600x669.jpeg">
+        <img src="tomi_grey_300x300.jpg">
     </div>
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
