--- a/index.html
+++ b/index.html
@@ -45,19 +45,31 @@
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
 
-        <p>I work as a Princpal Data Engineer/Consultant for <a target="_blank" href="https://ThinkBigAnalytics.com">Think
-            Big Analytics</a>,
-            where we help clients with Big Data Projects, using open source tools.</p>
+        <p>I work as a Princpal Data Engineer/Consultant for 
+            <a target="_blank" href="https://ThinkBigAnalytics.com">Think Big Analytics</a>,
+            a subsidiary of <a target="_blank" href="http://www.teradata.com/">Teradata</a>
+            where we help clients with Big Data Projects, using open source and commercial tools.</p>
+        
+        <p>Currently I work in a group in which we help clients build blended architectures
+            using big data and relational tools, both open source and commercial, on premise and/or
+            in the cloud. Our group is called 
+            <a target="_blank" 
+               href="http://www.teradata.com/solutions-and-industries/Ecosystem-Architecture-Consulting/?LangType=1033&LangSelect=true"
+               >Eco System Architecture
+            </a>.
+        </p>
 
         <p>Apache Spark is an exciting Big Data Technology, which I have been using at different clients:
             The power of the framwework combined with functional programming, leads to very compact and elegant
             solutions.</p>
 
-        <p>I grew up and studied Computer Science at the Swiss Federal Institute of Technology, in Zurich Switzerland.
+        <p>I grew up and studied Computer Science at the 
+            <a target="_blank" href="https://www.ethz.ch/en.html">Swiss Federal Institute of Technology (ETH)</a>,
+            in Zurich Switzerland.
             I lived and worked in Switzerland as a consultant until 2000, when I joined a startup in San Francisco.
-            Now I live in in Tustin, California, about half way between Los Angeles and San Diego.</p>
+            Now I live in in Tustin, southern California, about half way between Los Angeles and San Diego.</p>
 
-        <p>Software is not only my job, but my passion. I enjoy the fast pace of innovation, which makes
+        <p>Software is not only my job, but also my passion. I enjoy the fast pace of innovation, which makes
             live long learning a necessity.</p>
 
         <p>Please check out my professional profile on linkedIn:
