--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
                     alt="View Tomi Schumacher's LinkedIn profile" border="0"></a>
         </p>
         
-        <p>In my spare time I enjoy traveling, photography, listening to music and enjoying good food.</p>
+        <p>In my spare time I enjoy traveling, photography, listening to music and good food
+            (here are my reviews on 
+            <a target="_blank" 
+               href="https://m.yelp.com/user_details_reviews_self?userid=YjQNuV95_KrdtNi8-03ibA"
+               >yelp</a>).
+        </p>
 
-        <p>There will be more shortly, please check back in.</p>
-
+        <p>Please check back in, more will be added.</p>
     </div>
 </div>
 </body>
