--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
 
-        <p>I work as a Princpal Data Engineer/Consultant for 
+        <p>I work as a Princpal Data Engineer/Consultant/Architect for 
             <a target="_blank" href="https://ThinkBigAnalytics.com">Think Big Analytics</a>,
             a subsidiary of <a target="_blank" href="http://www.teradata.com/">Teradata</a>
-            where we help clients with Big Data Projects, using open source and commercial tools.</p>
-        
-        <p>Currently I work in a group in which we help clients build blended architectures
+            where we help clients with Big Data Projects, using open source and commercial tools.
+            Currently I work in a group in which we help clients build blended architectures
             using big data and relational tools, both open source and commercial, on premise and/or
             in the cloud. Our group is called 
             <a target="_blank" 
@@ -59,28 +58,22 @@
             </a>.
         </p>
 
-        <p>Apache Spark is an exciting Big Data Technology, which I have been using at different clients:
-            The power of the framwework combined with functional programming, leads to very compact and elegant
-            solutions.</p>
+        <p>I was born and raised in Zurich Switzerland, where studied Computer Science at the 
+            <a target="_blank" href="https://www.ethz.ch/en.html">Swiss Federal Institute of Technology (ETH)</a>.
+            I lived and worked in Switzerland until 2000, when I joined an Internet Startup in the US.
+            Now I live in in Tustin in southern California, about half way between Los Angeles and San Diego.
+        </p>
 
-        <p>I grew up and studied Computer Science at the 
-            <a target="_blank" href="https://www.ethz.ch/en.html">Swiss Federal Institute of Technology (ETH)</a>,
-            in Zurich Switzerland.
-            I lived and worked in Switzerland as a consultant until 2000, when I joined a startup in San Francisco.
-            Now I live in in Tustin, southern California, about half way between Los Angeles and San Diego.</p>
-
-        <p>Software is not only my job, but also my passion. I enjoy the fast pace of innovation, which makes
-            live long learning a necessity.</p>
-
-        <p>Please check out my professional profile on linkedIn:
+        <p>Software is not only my job, but also my passion. As a live long learner and curious person, I enjoy the fast pace of 
+            innovation in IT, which makes learning an essential part of every new project. 
             <a target="_blank" href="https://www.linkedin.com/pub/thomas-schumacher/5/6b9/959"
                style="text-decoration:none;"><img
                     src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15"
-                    alt="View Tomi Schumacher's LinkedIn profile" border="0"></a>
+                    alt="View Tomi Schumacher's LinkedIn profile" border="0"></a>        
         </p>
         
         <p>In my spare time I enjoy traveling, photography, listening to music and good food
-            (here are my reviews on 
+            (some of my favorite restaurants:  
             <a target="_blank" 
                href="https://m.yelp.com/user_details_reviews_self?userid=YjQNuV95_KrdtNi8-03ibA"
                >yelp</a>).
