--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </div>
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
+        
+        <p>If you google Tomi, you will find Tomi Lahren, but we are very easy to distingiuish: I am much better looking :)
+        </p>
 
         <p>I work as a Princpal Data Engineer/Consultant/Architect for 
             <a target="_blank" href="https://ThinkBigAnalytics.com">Think Big Analytics</a>,
