--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="container">
     <h1>Welcome</h1>
     <div class="photo">
-        <img src="tomi_grey_300x300.jpg">
+        <img src="tomi_grey_300x300.jpg" alt="Portrait of Tomi">
     </div>
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
@@ -72,7 +72,7 @@
             <a target="_blank" href="https://www.linkedin.com/pub/thomas-schumacher/5/6b9/959"
                style="text-decoration:none;"><img
                     src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15"
-                    alt="View Tomi Schumacher's LinkedIn profile" border="0"></a>        
+                    alt="View Tomi Schumacher's LinkedIn profile"></a>        
         </p>
         
         <p>In my spare time I enjoy traveling, photography, listening to music and good food
