--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </style>
     <meta charset="UTF-8">
     <title>Tomi Schumacher</title>
+    <link rel="icon" href="tomi_favicon_16x16.ico" type="image/x-icon">
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
