--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
                >yelp</a>).
         </p>
 
-        <p>Please check back in, more will be added.</p>
+        <p>I am trying to blog a bit now, please check out my blog on workpress: 
+            <a target="_blank" 
+               href="https://tomischumacher.wordpress.com/">
+                <img src="wordpress_logo.jpg" width="20" height="20"
+                    alt="View Tomi Schumacher'blog on wordpress">
+            </a>
+        </p>
     </div>
 </div>
 </body>
