--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
                     alt="View Tomi Schumacher's LinkedIn profile"></a>        
         </p>
         
-        <p>In my spare time I enjoy traveling, photography, listening to music and good food
+        <p>In my spare time I enjoy traveling, photography, listening to music and good food. I write 
+            pretty regularly (a couple times a year) about my favorite restaurants on yelp:
+            <a target="_blank" 
+               href="https://m.yelp.com/user_details_reviews_self?userid=YjQNuV95_KrdtNi8-03ibA">
+               <img src="Yelp_burst_positive_RGB.png" width="20" height="20"
+                    alt="View Tomi Schumacher's yelp postings"> 
+            </a>
+            
             (some of my favorite restaurants:  
             <a target="_blank" 
                href="https://m.yelp.com/user_details_reviews_self?userid=YjQNuV95_KrdtNi8-03ibA"
@@ -87,7 +94,7 @@
             <a target="_blank" 
                href="https://tomischumacher.wordpress.com/">
                 <img src="wordpress_logo.jpg" width="20" height="20"
-                    alt="View Tomi Schumacher'blog on wordpress">
+                    alt="View Tomi Schumacher's blog on wordpress">
             </a>
         </p>
     </div>
