--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Now I live in in Tustin in southern California, about half way between Los Angeles and San Diego.
         </p>
 
-        <p>Software is not only my job, but also my passion. As a live long learner and curious person, I enjoy the fast pace of 
+        <p>Software is not only my job, but also my passion. As a lifelong learner and curious person, I enjoy the fast pace of 
             innovation in IT, which makes learning an essential part of every new project. 
             <a target="_blank" href="https://www.linkedin.com/pub/thomas-schumacher/5/6b9/959"
                style="text-decoration:none;"><img
