--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>I was born and raised in Zurich Switzerland, where studied Computer Science at the 
             <a target="_blank" href="https://www.ethz.ch/en.html">Swiss Federal Institute of Technology (ETH)</a>.
             I lived and worked in Switzerland until 2000, when I joined an Internet Startup in the US.
-            Now I live in in Tustin in southern California, about half way between Los Angeles and San Diego.
+            Now I live in in Tustin in Southern California, about half way between Los Angeles and San Diego.
         </p>
 
         <p>Software is not only my job, but also my passion. As a lifelong learner and curious person, I enjoy the fast pace of 
