--- a/index.html
+++ b/index.html
@@ -49,26 +49,22 @@
         <p>If you google Tomi, you will find Tomi Lahren, but we are very easy to distingiuish: I am much better looking :)
         </p>
 
-        <p>I work as a Princpal Data Engineer/Consultant/Architect for 
+        <p>Currently I work as a Princpal Data Engineer/Consultant/Architect for 
             <a target="_blank" href="https://ThinkBigAnalytics.com">Think Big Analytics</a>,
             a subsidiary of <a target="_blank" href="http://www.teradata.com/">Teradata</a>
             where we help clients with Big Data Projects, using open source and commercial tools.
             Currently I work in a group in which we help clients build blended architectures
             using big data and relational tools, both open source and commercial, on premise and/or
-            in the cloud. Our group is called 
-            <a target="_blank" 
-               href="http://www.teradata.com/solutions-and-industries/Ecosystem-Architecture-Consulting/?LangType=1033&LangSelect=true"
-               >Eco System Architecture
-            </a>.
+            in the cloud.
         </p>
 
         <p>I was born and raised in Zurich Switzerland, where studied Computer Science at the 
             <a target="_blank" href="https://www.ethz.ch/en.html">Swiss Federal Institute of Technology (ETH)</a>.
             I lived and worked in Switzerland until 2000, when I joined an Internet Startup in the US.
-            Now I live in in Tustin in Southern California, about half way between Los Angeles and San Diego.
+            Now I live in in Tustin in Southern California, about half way between Los Angeles and San Diego. 
         </p>
 
-        <p>Software is not only my job, but also my passion. As a lifelong learner and curious person, I enjoy the fast pace of 
+        <p>Software engineering is not only my job, but also my passion. As a lifelong learner and curious person, I enjoy the fast pace of 
             innovation in IT, which makes learning an essential part of every new project. 
             <a target="_blank" href="https://www.linkedin.com/pub/thomas-schumacher/5/6b9/959"
                style="text-decoration:none;"><img
@@ -83,6 +79,8 @@
                <img src="Yelp_burst_positive_RGB.png" width="20" height="20"
                     alt="View Tomi Schumacher's yelp postings"> 
             </a>
+            I recently started biking again. It turns out, that that there are hills and quiet streets 
+            just a few block away from my front door, and my new road bike is a lot of fun.
         </p>
 
         <p>I am trying to blog a bit now, please check out my blog on workpress: 
@@ -92,6 +90,8 @@
                     alt="View Tomi Schumacher's blog on wordpress">
             </a>
         </p>
+        
+        
     </div>
 </div>
 </body>
