--- a/index.html
+++ b/index.html
@@ -45,13 +45,9 @@
     </div>
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
-        
-        <p>If you google Tomi, you will find Tomi Lahren, but we are very easy to distingiuish: I am much better looking :)
-        </p>
 
-        <p>Currently I work as a Princpal Data Engineer/Consultant/Architect for 
-            <a target="_blank" href="https://ThinkBigAnalytics.com">Think Big Analytics</a>,
-            a subsidiary of <a target="_blank" href="http://www.teradata.com/">Teradata</a>
+        <p>Currently I work as a Enterprise Architect/Princpal Data Engineer/Consultant for 
+            <a target="_blank" href="https://www.teradata.com">Teradata</a>
             where we help clients with Big Data Projects, using open source and commercial tools.
             Currently I work in a group in which we help clients build blended architectures
             using big data and relational tools, both open source and commercial, on premise and/or
@@ -61,7 +57,7 @@
         <p>I was born and raised in Zurich Switzerland, where studied Computer Science at the 
             <a target="_blank" href="https://www.ethz.ch/en.html">Swiss Federal Institute of Technology (ETH)</a>.
             I lived and worked in Switzerland until 2000, when I joined an Internet Startup in the US.
-            Now I live in in Tustin in Southern California, about half way between Los Angeles and San Diego. 
+            Now I live in in Orange County in Southern California, about half way between Los Angeles and San Diego. 
         </p>
 
         <p>Software engineering is not only my job, but also my passion. As a lifelong learner and curious person, I enjoy the fast pace of 
