--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
     <div class="intro">
         <p>My Name is Tomi Schumacher. I am a software professional with over 20 years of experience.</p>
 
-        <p>Currently I work as a Enterprise Architect/Princpal Data Engineer/Consultant for 
-            <a target="_blank" href="https://www.teradata.com">Teradata</a>
-            where we help clients with Big Data Projects, using open source and commercial tools.
-            Currently I work in a group in which we help clients build blended architectures
-            using big data and relational tools, both open source and commercial, on premise and/or
-            in the cloud.
+        <p>Currently I work as a Solutions Architect for stratetic accounts on the west coast (US) at
+            <a target="_blank" href="https://www.databricks.com">Databricks</a>
+            where we help large enterprise clients use the Databricks Data and AI platform on
+            the Azure or AWS cloud.
         </p>
 
         <p>I was born and raised in Zurich Switzerland, where studied Computer Science at the 
